--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Suwings",
   "license": "ISC",
   "dependencies": {
+    "@types/fs-extra": "^9.0.11",
+    "@types/iconv-lite": "0.0.1",
+    "@types/node": "^15.0.2",
+    "@types/socket.io": "^2.1.13",
+    "@types/uuid": "^8.3.0",
     "crypto": "^1.0.1",
     "fs-extra": "^9.0.1",
     "iconv-lite": "^0.6.2",
