--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/fs-extra": "^9.0.11",
     "@types/iconv-lite": "0.0.1",
+    "@types/log4js": "^2.3.5",
     "@types/node": "^15.0.2",
     "@types/socket.io": "^2.1.13",
     "@types/uuid": "^8.3.0",
