--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "daemon",
   "main": "app.js",
   "scripts": {
+    "serve": "ts-node ./src/app.ts",
     "test": "mocha",
     "start": "node app.js"
   },
@@ -22,6 +23,8 @@
     "log4js": "^6.3.0",
     "socket.io": "^3.1.2",
     "socket.io-client": "^3.1.3",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
